# mcp-test-harness

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  index.html  mcp_test_harness.spec  pyproject.toml  server.json
.github/actions/mcp-test/: action.yml
.github/workflows/: docker-publish.yml  pages.yml  publish-packages.yml  publish.yml  validate.yml
docs/: ARCHITECTURE.md  CI_AND_REPORTS.md  COLLECTIONS.md  COMPARISON.md  CONTRACT_AND_COMPAT.md  DECISIONS.md  DEVELOPER.md  DEVELOPER_GUIDE.md  DISCOVERY.md  DOCKER.md  EDITORS.md  ENTERPRISE_GOVERNANCE.md  IMPLEMENTATION_CHECKLIST.md  LLM_TEST_GENERATION.md  MARKDOWN_CONVENTIONS.md  PERFORMANCE.md  PERFORMANCE_TESTING_STRATEGY.md  PLUGIN_REGISTRY.md  PROJECT_REVIEW.md  QUICK_START.md  README.md  RELEASING.md  ROADMAP.md  SECURITY_TESTING.md  TUTORIAL.md  index.md
examples/: FEATURES_INDEX.md  README.md  assertions_async_demo.py  basic_usage.py  example_cli_list_filters.md  example_docker.md  example_doctor.md  example_enhanced_reports.md  example_fixture_system.md  example_github_actions.md  example_markers_skip.md  example_mcp_assertions.md  example_mcp_test_init.md  example_parallel_workers.md  example_pyinstaller.md  example_report_formats.md  example_schema_validation.md  example_snapshot_testing.md  example_test_discovery.md  example_transports.md  example_watch_mode.md  mcp_test_report_html.yaml  mcp_test_report_json.yaml  mcp_test_report_junit.yaml  mcp_test_transport_http.example.yaml  mcp_test_transport_sse.example.yaml  patterns_mcp_test.md  reference_plugin.py  sample_mcp_test.yaml  validate_mcp_test_config.py  version_gate.py
examples/feature-demo/: README.md  example_feature_demo_quick_run.md  generate_demo_py_files.py
examples/feature-demo/eu-ai-act/: README.md  mcp_test_eu_ai_act_demo.yaml  test_eu_ai_act_demo.py
examples/feature-demo/eu-ai-act/reports/: README.md
examples/feature-demo/functional-testing/: README.md  mcp_test_functional_demo.yaml  test_functional_demo.py
examples/feature-demo/functional-testing/reports/: README.md
examples/feature-demo/performance-testing/: README.md  mcp_test_performance_demo.yaml  test_performance_demo.py
examples/feature-demo/performance-testing/reports/: README.md
examples/feature-demo/python-scenarios/: README.md  test_demo_01_assert_tool_call.py  test_demo_02_assert_tool_list.py  test_demo_03_assert_tool_schema.py  test_demo_04_assert_tool_rejects.py  test_demo_05_assert_invalid_tool.py  test_demo_06_assert_tool_call_validates_input.py  test_demo_07_validate_against_input_schema.py  test_demo_08_assert_resource_read.py  test_demo_09_assert_resource_list.py  test_demo_10_assert_prompt.py  test_demo_11_assert_capabilities.py  test_demo_12_assert_snapshot.py  test_demo_13_assert_snapshot_ignore.py  test_demo_14_assert_snapshot_mask.py  test_demo_15_assert_protocol_version.py  test_demo_16_assert_tool_idempotent.py  test_demo_17_assert_latency_single.py  test_demo_18_assert_latency_p95.py  test_demo_19_assert_latency_p99.py  test_demo_20_assert_latency_mean.py  test_demo_21_assert_latency_median.py  test_demo_22_assert_latency_warmup.py  test_demo_23_mcp_server_fixture.py  test_demo_24_mcp_server_session_fixture.py  test_demo_25_marker_timeout.py  test_demo_26_marker_retry.py  test_demo_27_marker_tags.py  test_demo_28_marker_order.py  test_demo_29_skip.py  test_demo_30_skip_with_reason.py
examples/feature-demo/regression-testing/: README.md  mcp_test_regression_demo.yaml  test_regression_demo.py
examples/feature-demo/regression-testing/reports/: README.md
examples/feature-demo/reports/: README.md  build_sample_html.py  sample_mcp_test_report.html
examples/feature-demo/responsible-ai/: README.md  mcp_test_responsible_ai_demo.yaml  test_responsible_ai_demo.py
examples/feature-demo/responsible-ai/reports/: README.md
examples/feature-demo/scenarios/: README.md  generate_scenario_docs.py  scenario_01_test_discovery.md  scenario_02_mcp_assertions.md  scenario_03_fixtures.md  scenario_04_schema_validation.md  scenario_05_snapshots.md  scenario_06_parallel.md  scenario_07_watch.md  scenario_08_markers.md  scenario_09_report_junit.md  scenario_10_report_json.md  scenario_11_report_html.md  scenario_12_plugins.md  scenario_13_transport_stdio.md  scenario_14_transport_sse.md  scenario_15_transport_http.md  scenario_16_github_action.md  scenario_17_docker.md  scenario_18_pyinstaller.md  scenario_19_mcp_init.md  scenario_20_cli_filters.md  scenario_21_config_validation.md  scenario_22_version_gate.md  scenario_23_basic_usage.md  scenario_24_assert_latency.md  scenario_25_assert_capabilities.md  scenario_26_assert_resource.md  scenario_27_assert_prompt.md  scenario_28_assert_tool_schema.md  scenario_29_assert_protocol_version.md  scenario_30_assert_idempotent.md
examples/feature-demo/usa-interest/: README.md  mcp_test_usa_interest_demo.yaml  test_usa_interest_demo.py
html/: compare.html  examples.html  index.html  robots.txt  sitemap.xml
html/assets/: charts.js  style.css
scripts/: build_binary.py  verify_upstream.py
src/mcp_test_harness/: __init__.py  assertions.py  cli.py  config.py  discovery.py  doctor.py  executor.py  fixtures.py  html_reporter.py  last_failed_cache.py  lifecycle.py  models.py  parser.py  plugins.py  reporting.py  scaffold.py  scheduler.py  schema.py  snapshots.py  stdio_mcp.py  transport.py
src/mcplint/: __init__.py
tests/: test_assertions.py  test_cli.py  test_config.py  test_config_extra.py  test_coverage_gaps.py  test_discovery.py  test_doctor.py  test_executor.py  test_feature_demo_examples.py  test_final_gaps.py  test_fixtures.py  test_last_failed_cache.py  test_lifecycle.py  test_line_coverage_sweep.py  test_parser.py  test_plugins.py  test_plugins_extra.py  test_pyproject.py  test_reporting.py  test_rigorous_coverage.py  test_scaffold.py  test_scheduler.py  test_schema.py  test_snapshots.py  test_stdio_mcp.py  test_stdio_mcp_integration.py  test_transport.py  test_transport_extra.py  test_transport_shlex.py  test_workspace.py
(+1 files in other folders)
