[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-test-harness"
version = "0.1.1"
description = "MCP Test Harness -- pytest-style testing framework for MCP servers with automated test discovery, assertions, fixtures, and CI reporting."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Vaquar Khan", email = "vaquarkhan@gmail.com"}]
keywords = ["mcp", "mcplint", "mcp-test", "testing", "model-context-protocol", "test-harness", "json-rpc"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "mcp>=1.0.0",
  "anyio>=4.0.0",
  "pyyaml>=6.0",
]

[project.scripts]
mcp-test = "mcp_test_harness.cli:main"

[project.optional-dependencies]
# Pins MCP-Bastion for the mcplint shim (optional; core harness does not need it)
mcplint = [
  "mcp-bastion-python>=1.0.12",
]
bedrock = [
  "mcp-bastion-bedrock>=0.1.0",
]
dev = [
  "mcp-bastion-python>=1.0.12",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "jsonschema>=4.0.0",
  "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/vaquarkhan/mcp-test-harness"
Repository = "https://github.com/vaquarkhan/mcp-test-harness"
Documentation = "https://github.com/vaquarkhan/mcp-test-harness#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/mcplint", "src/mcp_test_harness"]

[tool.hatch.build.targets.sdist]
include = [
  "src/mcplint",
  "src/mcp_test_harness",
  "README.md",
  "LICENSE",
  "NOTICE",
  "CITATION.cff",
  "server.json",
  "docs",
  "scripts",
  "examples",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

# Coverage: 100% on framework modules. stdio_mcp is vendored subprocess I/O
# (fully exercised in real stdio runs); omit from the fail-under gate.
[tool.coverage.run]
source = ["src/mcp_test_harness"]
omit = [
  "*/mcp_test_harness/stdio_mcp.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "^\\s+\\.\\.\\.$",
]
